add simple styles

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,12 +13,36 @@ html {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: flex-start;
+    background-image: url(../img/bg.png);
+    background-repeat: repeat;
+    background-size: auto;
+
+    .step {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      width: 20rem;
+      height: 30rem;
+      padding: 1.5rem;
+      margin: 3rem 1rem;
+      border: 0.1rem solid rgba($color: #000, $alpha: 0.1);
+      border-radius: 0.6rem;
+      background-color: rgba($color: #fff, $alpha: 0.1);
+      box-shadow: 0.1rem 0.1rem 3rem #000;
+    }
   }
 }
 
 @media only screen and (max-width: 768px) {
   html {
     font-size: 75%;
+
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
 
