--- a/scss/index.scss
+++ b/scss/index.scss
@@ -48,6 +48,18 @@ html {
         width: 95%;
       }
 
+      textarea {
+        @extend %textarea;
+        min-width: 95%;
+        min-height: 40%;
+        max-width: 95%;
+        max-height: 40%;
+        padding: 0.3rem 0.6rem;
+        background-color: rgba($color: #fff, $alpha: 0.2);
+        border-radius: 0.7rem;
+        box-shadow: 0.1rem 0.1rem 0.5rem #000;
+      }
+
       label {
         @extend %label;
         display: flex;
@@ -59,6 +71,7 @@ html {
         @extend %input;
         text-align: center;
         width: 95%;
+        height: 70%;
         padding: 0.5rem 0.3rem 0 0.3rem;
         border: 0.1rem solid rgba($color: #000, $alpha: 0.1);
         background-color: rgba($color: #fff, $alpha: 0.2);
