--- a/scss/index.scss
+++ b/scss/index.scss
@@ -17,6 +17,49 @@ html {
     background-repeat: repeat;
     background-size: auto;
 
+    .warning {
+      position: fixed;
+      top: 5%;
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 95%;
+      height: 90%;
+      padding: 0 15%;
+      border: 0.1rem solid rgba($color: #000, $alpha: 0.1);
+      border-radius: 0.6rem;
+      background-color: rgba($color: #840724, $alpha: 0.95);
+      box-shadow: 0.1rem 0.1rem 3rem #000;
+
+      h1 {
+        @extend %title;
+        padding: 5%;
+      }
+
+      p {
+        @extend %textarea;
+        padding: 2%;
+      }
+
+      button {
+        @extend %button;
+        padding: 5%;
+        border: none;
+        transition: all 0.15s ease-in-out;
+
+        &:hover {
+          @extend %button-hover;
+          scale: 1.1;
+        }
+
+        &:active {
+          @extend %button-active;
+          scale: 1.2;
+        }
+      }
+    }
+
     .step {
       display: flex;
       flex-direction: column;
@@ -51,9 +94,9 @@ html {
       textarea {
         @extend %textarea;
         min-width: 95%;
-        min-height: 40%;
+        min-height: 28%;
         max-width: 95%;
-        max-height: 40%;
+        max-height: 28%;
         padding: 0.3rem 0.6rem;
         background-color: rgba($color: #fff, $alpha: 0.2);
         border-radius: 0.7rem;
