--- a/scss/index.scss
+++ b/scss/index.scss
@@ -24,7 +24,7 @@ html {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 95%;
+      width: 90%;
       height: 90%;
       padding: 0 15%;
       border: 0.1rem solid rgba($color: #000, $alpha: 0.1);
@@ -38,7 +38,8 @@ html {
       }
 
       p {
-        @extend %textarea;
+        @extend %warning;
+        text-align: center;
         padding: 2%;
       }
 
